feat: enhance user model to support multiple name fields and update related requests